--- a/client/components/modal/additem.html
+++ b/client/components/modal/additem.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Description
+      Add Item
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
-        <span color="primary" showWhen="ios,android,windows">Cancel</span>
-        <ion-icon color="primary" name="md-close" showWhen="android,windows"></ion-icon>
+        <span color="primary" showWhen="ios">Cancel</span>
+        <ion-icon name="md-close-circle" showWhen="android,windows"></ion-icon>
       </button>
     </ion-buttons>
   </ion-toolbar>
