--- a/client/components/modal/login.html
+++ b/client/components/modal/login.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Add Item
+      Login
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
