--- a/client/components/modal/additem.html
+++ b/client/components/modal/additem.html
@@ -1,46 +1,46 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Add Item
-    </ion-title>
-    <ion-buttons start>
-      <button ion-button (click)="dismiss()">
-        <span color="primary" showWhen="ios">Cancel</span>
-        <ion-icon name="md-close-circle" showWhen="android,windows"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Add Item
+        </ion-title>
+        <ion-buttons start>
+            <button ion-button (click)="dismiss()">
+                <span color="primary" showWhen="ios">Cancel</span>
+                <ion-icon name="md-close-circle" hideWhen="ios"></ion-icon>
+            </button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 <ion-content class="outer-content">
-  <ion-list>
-      <ion-item>
-          <ion-input placeholder="Food Name" type="text" [(ngModel)]="name"></ion-input>
-      </ion-item>
-            <ion-item>
-          <ion-input placeholder="Portions" type="text" [(ngModel)]="portions"></ion-input>
-      </ion-item>
-            <ion-item>
-          <ion-input placeholder="Price" type="text" [(ngModel)]="price"></ion-input>
-      </ion-item>
-      <ion-item>
-          <ion-label>Expiration Date</ion-label>  
-          <ion-datetime displayFormat="DDD/MMM" pickerFormat="DDD MMM" [(ngModel)]="expiration"></ion-datetime>
-      </ion-item>
-      <ion-item>
-         <ion-segment [(ngModel)]="location">
-            <ion-segment-button value="Counter">
-                Counter
-            </ion-segment-button>
-            <ion-segment-button value="Fridge">
-                Refrigerator
-            </ion-segment-button>
-             <ion-segment-button value="Freezer">
-                Freezer
-            </ion-segment-button>
-        </ion-segment>
-      </ion-item>
-      <ion-item>
-          <button ion-button full large (click)="addItem()">Add Item</button>
-      </ion-item>
-  </ion-list>
+    <ion-list>
+        <ion-item>
+            <ion-input placeholder="Food Name" type="text" [(ngModel)]="name"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-input placeholder="Portions" type="text" [(ngModel)]="portions"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-input placeholder="Price" type="text" [(ngModel)]="price"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label>Expiration Date</ion-label>
+            <ion-datetime displayFormat="YYYY-MM-DD" pickerFormat="MMM DD YYYY" [(ngModel)]="expiration"></ion-datetime>
+        </ion-item>
+        <ion-item>
+            <ion-segment [(ngModel)]="location">
+                <ion-segment-button value="Counter">
+                    Counter
+                </ion-segment-button>
+                <ion-segment-button value="Fridge">
+                    Refrigerator
+                </ion-segment-button>
+                <ion-segment-button value="Freezer">
+                    Freezer
+                </ion-segment-button>
+            </ion-segment>
+        </ion-item>
+        <ion-item>
+            <button ion-button full large (click)="addItem()">Add Item</button>
+        </ion-item>
+    </ion-list>
 </ion-content>
