Transaction has a number value that can be passed hopefully.

--- a/client/components/modal/addTransaction.html
+++ b/client/components/modal/addTransaction.html
@@ -11,3 +11,18 @@
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
+
+<ion-content class="outer-content">
+
+<ion-list>
+        <ion-item>
+            <ion-input placeholder="Price" type="number" [(ngModel)]="value" required></ion-input>
+        </ion-item>
+        </ion-list>
+
+
+        <ion-item>
+            <button ion-button full large (click)="addValue()">Add Transaction</button>
+        </ion-item>
+
+        </ion-content>
