--- a/client/components/modal/additem.html
+++ b/client/components/modal/additem.html
@@ -27,7 +27,7 @@
             <ion-input placeholder="Food Name" type="text" [(ngModel)]="name" required></ion-input>
         </ion-item>
         <ion-item>
-            <ion-input placeholder="Price (numbers only)" type="number" [(ngModel)]="price" required></ion-input>
+            <ion-input placeholder="Price (numbers only)" type="number" [(ngModel)]="price" inputmode="numeric" required></ion-input>
         </ion-item>
         <ion-item *ngIf="type == 'grocery'">
             <ion-label>Expiration Date</ion-label>
